[tool.poetry]
name = "tech-note-contents"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tech_note_contents"}]

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
